--- a/tensorflow_pruning.ipynb
+++ b/tensorflow_pruning.ipynb
@@ -135,13 +135,16 @@
     "\n",
     "##### 훈련과 평가\n",
     "- model.compile() : 위에서 모델을 구성한 후 compile함수를 호출하여 학습 과정 설정한다\n",
-    "- 위 함수엣는 중요한 3가지 매개변수가 있다\n",
+    "    위 함수에는 중요한 3가지 매개변수가 있다\n",
+    "    \n",
     "    optimizer = 훈련과정을 설정(ex_ 'adam', 'sgd'와 같은 문자열로 지정 가능)\n",
     "    loss = 최적화 과정에서 최소화될 손실 함수를 설정\n",
     "    metrics = 훈련을 모니터링하기 위해 사용된다\n",
     "    \n",
+    "    \n",
     "- model.fit() : 모델은 fit함수를 통해서 훈련 data를 학습한다\n",
-    "- 위 함수에는 중요한 3가지 매개변수가 있다\n",
+    "\n",
+    "    위 함수에는 중요한 3가지 매개변수가 있다\n",
     "    epochs = 훈련은 epoch로 구성되어 있다. 한 epoch에는 전체 입력 데이터를 한번 순회하는 것이다\n",
     "    batch_size = 모델은 data르ㄹ 작은 batch로 나누고 훈련 과정에서 이 배치를 순회한다.\n",
     "    "
@@ -296,13 +299,100 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### 전체 모델에 pruning을 적용시키고 model summary에 대한 내용 보기"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 머신러닝 모델 최적화 도구인 tensorflow_model_optimization import한다\n"
+    "- 머신러닝 모델 최적화 도구인 tensorflow_model_optimization import한다\n",
+    "    +  tfmot.sparsity.keras.prune_low_magnitude(): 훈련 하면서 pruning 할 keras.layer 또는 모델을 수정한다\n",
+    "    \n",
+    "    \n",
+    "        -  이 funtion은 훈련중에 layer의 가중치를 pruning 한다(layer의 weight값을 sparsify(0으로 만든다)한다)\n",
+    "            (ex) sparsity=50% -> layer weight의 50%가 0이 된다.\n",
+    "            \n",
+    "        - 이 funtion은 단일 keras layer, list of keras layer, Sequential or Functional keras model을 받아들여 처리한다.\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### prune a model\n",
+    "\n",
+    "1. pruning_params = {'pruning_schedule':tfmot.sparsity.keras.PolynomialDecay()}\n",
+    "                \n",
+    "    **tfmot.sparsity.keras.PolynomialDecay(initial_sparsity, final_sparsity, begin_step, end_step, power=3, frequency=100)**\n",
+    "\n",
+    "\n",
+    "- 'initial_sparsity', 'final_sparsity': model pruning을 초기 sparsity에서 시작하여 훈련하면서 목표 sparsity=final_sparsity에 도달할때 까지 pruning을 진행한다.\n",
+    "\n",
+    "- 'begin_step', 'end_step' : Step at which to begin pruning, Step at which to end pruning. \n",
+    "\n",
+    "- 'power' : sparsity funtion에서 사용될 지수\n",
+    "\n",
+    "- 'frequency': frequency step 마다 pruning 적용\n",
+    "\n",
+    "\n",
+    "2. pruning_schedule: 각 단계에서 레이어의 가중치를 제거해야하는지 여부와 제거해야하는 희소성 (%)을 알려 각 훈련 단계에서 제거를 제어합니다.\n",
+    "\n",
+    "\n",
+    "3. prune a model \n",
+    "\n",
+    "     **prune_low_magnitude(model, **pruning_params)**\n",
+    "        \n",
+    "\n",
+    "    -각 layer마다 pruning 구성을 어떻게 다르게 할것인가에 대한 세부사항 정의\n",
+    "\n",
+    "\n",
+    "4. model_for_pruning.summary()\n",
+    "\n",
+    "        - trainable params는 total params의 반값이다 -> sparisty를 50%로 잡았기 때문이다.\n",
+    "    \n",
+    "        - 모델 요약은 총 모델에 사용되는 parmameter의 개수이다!\n",
+    "\n",
+    "\n",
+    "5. model.compile(): 학습 과정 설정한다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Train and evaluate the model against baseline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logdir = tempfile.mkdtemp()\n",
+    "\n",
+    "callbacks = [\n",
+    "  tfmot.sparsity.keras.UpdatePruningStep(),\n",
+    "  tfmot.sparsity.keras.PruningSummaries(log_dir=logdir),\n",
+    "]\n",
+    "  \n",
+    "model_for_pruning.fit(train_images, train_labels,\n",
+    "                  batch_size=batch_size, epochs=epochs, validation_split=validation_split,\n",
+    "                  callbacks=callbacks)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. **tfmot.sparsity.keras.UpdatePruningStep()**\n",
+    "    \n",
+    "\n",
+    "2. **tfmot.sparsity.keras.PruningSummaries()**\n",
+    "    주어진 반복 단계에서 희소성 (%) 및 임계 값을 기록합니다."
    ]
   }
  ],
