tensorflow pruning api description3

--- a/tensorflow_pruning.ipynb
+++ b/tensorflow_pruning.ipynb
@@ -338,8 +338,9 @@
     "- 'frequency': frequency step 마다 pruning 적용\n",
     "\n",
     "\n",
-    "2. pruning_schedule: 각 단계에서 레이어의 가중치를 제거해야하는지 여부와 제거해야하는 희소성 (%)을 알려 각 훈련 단계에서 제거를 제어합니다.\n",
+    "2. **pruning_schedule**: 각 단계에서 레이어의 가중치를 제거해야하는지 여부와 제거해야하는 희소성 (%)을 알려 각 훈련 단계에서 제거를 제어합니다.\n",
     "\n",
+    "current_sparsity = final_sparsity + (initial_sparsity - final_sparsity) * (1 - (step - begin_step)/(end_step - begin_step)) ^ exponent\n",
     "\n",
     "3. prune a model \n",
     "\n",
@@ -356,7 +357,9 @@
     "        - 모델 요약은 총 모델에 사용되는 parmameter의 개수이다!\n",
     "\n",
     "\n",
-    "5. model.compile(): 학습 과정 설정한다"
+    "5. model.compile(): 학습 과정 설정한다\n",
+    "    - prune_low_magnitude 함수는 optimizer과정이 없다.\n",
+    "    "
    ]
   },
   {
@@ -388,11 +391,118 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. **tfmot.sparsity.keras.UpdatePruningStep()**\n",
-    "    \n",
+    "6. fine tune with pruning\n",
     "\n",
-    "2. **tfmot.sparsity.keras.PruningSummaries()**\n",
-    "    주어진 반복 단계에서 희소성 (%) 및 임계 값을 기록합니다."
+    "    6.1 **tfmot.sparsity.keras.UpdatePruningStep()**\n",
+    "        \n",
+    "        - Keras callback which updates pruning wrappers with the optimizer step.\n",
+    "        \n",
+    "        - fine-tuning: 기존에 학습되어 있는 모델을 기반으로 아키텍처를 새로운 목적에 맞게 변형하고 이미 학습된 모델 weight로 부터 학습을 update하는 방법\n",
+    "        \n",
+    "        - wrapper: 가장 이상적인 변수의 조합을 찾는 방식\n",
+    "        \n",
+    "        - 즉, training의 optimizer 단계 대신 pruning wrapper 단계를 넣어 update한다.\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "    6.2 tfmot.sparsity.keras.PruningSummaries()\n",
+    "    \n",
+    "        - 주어진 반복 단계에서 희소성 (%) 및 임계 값을 기록합니다(tensorboard에 넣기 위한 작업)\n",
+    "        \n",
+    "\n",
+    "7. training\n",
+    "\n",
+    "    model_for_pruning.fit(.., callbacks=callbacks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, model_for_pruning_accuracy = model_for_pruning.evaluate(\n",
+    "   test_images, test_labels, verbose=0)\n",
+    "\n",
+    "print('Baseline test accuracy:', baseline_model_accuracy) \n",
+    "print('Pruned test accuracy:', model_for_pruning_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- pre-trained model의 정확도와 pruned model의 정확도 비교"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create 3x smaller models from pruning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* pruning의 compression benefits를 얻기 위해서는 \n",
+    "\n",
+    "    tfmot.sparsity.keras.strip_pruning() + standard compression algorithm (e.g. via gzip)\n",
+    "    \n",
+    "    1. tfmot.sparsity.keras.strip_pruning(model)\n",
+    "    \n",
+    "        - model의 pruning wrapper를 제거한다.\n",
+    "        \n",
+    "        - 즉, 모델이 pruning된 후에 이 function을 사용하여 sparse weight로 원래 모델로 복원한다.\n",
+    "        \n",
+    "        - The exported_model and the orig_model share the same structure."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 이 과정은 tensorflow와 호환되는 model로 만들기!\n",
+    "\n",
+    "model_for_export = tfmot.sparsity.keras.strip_pruning(model_for_pruning)\n",
+    "\n",
+    "_, pruned_keras_file = tempfile.mkstemp('.h5')\n",
+    "tf.keras.models.save_model(model_for_export, pruned_keras_file, include_optimizer=False)\n",
+    "print('Saved pruned Keras model to:', pruned_keras_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-f96f654b170d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m## 위 model을 가지고 TFLite와 호환되는 model로 만들기!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mconverter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlite\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTFLiteConverter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_keras_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_for_export\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mpruned_tflite_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconverter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconvert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "## 위 model을 가지고 TFLite와 호환되는 model로 만들기!\n",
+    "\n",
+    "converter = tf.lite.TFLiteConverter.from_keras_model(model_for_export)\n",
+    "pruned_tflite_model = converter.convert()\n",
+    "\n",
+    "_, pruned_tflite_file = tempfile.mkstemp('.tflite')\n",
+    "\n",
+    "with open(pruned_tflite_file, 'wb') as f:\n",
+    "  f.write(pruned_tflite_model)\n",
+    "\n",
+    "print('Saved pruned TFLite model to:', pruned_tflite_file)\n"
    ]
   }
  ],
