tensorflow pruning api description4

--- a/tensorflow_pruning.ipynb
+++ b/tensorflow_pruning.ipynb
@@ -504,6 +504,89 @@
     "\n",
     "print('Saved pruned TFLite model to:', pruned_tflite_file)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "* Converting a tf.Keras model to a TensorFlow Lite model.\n",
+    "\n",
+    "        converter = lite.TFLiteConverter.from_keras_model(model)\n",
+    "        tflite_model = converter.convert()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#gzip을 통해 모델을 실제로 압축하고 압축 된 크기를 측정하는 도우미 기능을 정의\n",
+    "\n",
+    "def get_gzipped_model_size(file):\n",
+    "  # Returns size of gzipped model, in bytes.\n",
+    "  import os\n",
+    "  import zipfile\n",
+    "\n",
+    "  _, zipped_file = tempfile.mkstemp('.zip')\n",
+    "  with zipfile.ZipFile(zipped_file, 'w', compression=zipfile.ZIP_DEFLATED) as f:\n",
+    "    f.write(file)\n",
+    "\n",
+    "  return os.path.getsize(zipped_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Size of gzipped baseline Keras model: %.2f bytes\" % (get_gzipped_model_size(keras_file)))\n",
+    "print(\"Size of gzipped pruned Keras model: %.2f bytes\" % (get_gzipped_model_size(pruned_keras_file)))\n",
+    "print(\"Size of gzipped pruned TFlite model: %.2f bytes\" % (get_gzipped_model_size(pruned_tflite_file)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a 10x smaller model from combining pruning and quantization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "converter = tf.lite.TFLiteConverter.from_keras_model(model_for_export)\n",
+    "converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
+    "quantized_and_pruned_tflite_model = converter.convert()\n",
+    "\n",
+    "_, quantized_and_pruned_tflite_file = tempfile.mkstemp('.tflite')\n",
+    "\n",
+    "with open(quantized_and_pruned_tflite_file, 'wb') as f:\n",
+    "  f.write(quantized_and_pruned_tflite_model)\n",
+    "\n",
+    "print('Saved quantized and pruned TFLite model to:', quantized_and_pruned_tflite_file)\n",
+    "\n",
+    "print(\"Size of gzipped baseline Keras model: %.2f bytes\" % (get_gzipped_model_size(keras_file)))\n",
+    "print(\"Size of gzipped pruned and quantized TFlite model: %.2f bytes\" % (get_gzipped_model_size(quantized_and_pruned_tflite_file)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 추가적인 benefit를 위해 pruned model에 대해 post-training quantization 과정 추가\n",
+    "\n",
+    "    - post-training quantization\n",
+    "        - training 후에 quantization 수행\n",
+    "        - accelerator의 latency를 개선시키면서 정확도에 대한 손해 최소화 기법\n",
+    "        - 이 작업은 tensorflow model을 tflite model로 변환시킬때 이 작업이 이루어 진다. \n",
+    "        "
+   ]
   }
  ],
  "metadata": {
