--- a/Untitled Folder/compression_code/dataset_load.ipynb
+++ b/Untitled Folder/compression_code/dataset_load.ipynb
@@ -20,7 +20,11 @@
     "# fashion mnist\n",
     "fashion_mnist = keras.datasets.fashion_mnist\n",
     "\n",
-    "(train_images, train_labels), (test_images, test_labels) = fashion_mnist.load_data()"
+    "(train_images, train_labels), (test_images, test_labels) = fashion_mnist.load_data()\n",
+    "\n",
+    "train_images = train_images / 255.0\n",
+    "\n",
+    "test_images = test_images / 255.0"
    ]
   },
   {
@@ -32,7 +36,11 @@
     "# mnist\n",
     "fashion_mnist = keras.datasets.mnist\n",
     "\n",
-    "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()"
+    "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()\n",
+    "\n",
+    "train_images = train_images / 255.0\n",
+    "\n",
+    "test_images = test_images / 255.0"
    ]
   },
   {
