--- a/quan_aware_pipe.ipynb
+++ b/quan_aware_pipe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/html": [
-       "Run link <a href=\"/pipeline/#/runs/details/8a8262ca-5a61-4e42-966c-92f49f227e77\" target=\"_blank\" >here</a>"
+       "Run link <a href=\"/pipeline/#/runs/details/3e83b2e2-270b-4caa-aa92-0ce0a72726c6\" target=\"_blank\" >here</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -48,7 +48,7 @@
     "    description='mnist '\n",
     ")\n",
     "\n",
-    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2, model_version3):\n",
+    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2):\n",
     "    \n",
     "    exit_task = echo_op(\"Done!\")\n",
     "    \n",
@@ -77,32 +77,18 @@
     "            pvolumes={\"/result\": fmnist_vop.volume}\n",
     "        )\n",
     "        \n",
-    "        #prun com\n",
-    "        prun = dsl.ContainerOp(\n",
-    "            name='prun',\n",
-    "            image='khw2126/prun:0.0.11',\n",
-    "            command=['python', '/app/pruning_code.py'],\n",
+    "        #quan com\n",
+    "        quan = dsl.ContainerOp(\n",
+    "            name='quan',\n",
+    "            image='khw2126/quan:0.0.8',\n",
+    "            command=['python', '/app/quantization_aware_code.py'],\n",
     "            arguments=[\n",
     "                \"--model_path\", model_path,\n",
     "                \"--model_version\", model_version,\n",
     "                \"--model_version2\", model_version2,\n",
     "            ],\n",
     "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
-    "            pvolumes={\"/result\": mnist.pvolume}\n",
-    "        )\n",
-    "        \n",
-    "        #quan com\n",
-    "        quan_aware = dsl.ContainerOp(\n",
-    "            name='quan_aware',\n",
-    "            image='khw2126/quan:0.0.8',\n",
-    "            command=['python', '/app/quantization_aware_code.py'],\n",
-    "            arguments=[\n",
-    "                \"--model_path\", model_path,\n",
-    "                \"--model_version\", model_version,\n",
-    "                \"--model_version3\", model_version3,\n",
-    "            ],\n",
-    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
-    "            pvolumes={\"/result\": prun.pvolume}\n",
+    "            pvolumes={\"/result\": mnist.volume}\n",
     "        )\n",
     "        \n",
     "        #result com\n",
@@ -115,9 +101,9 @@
     "        )\n",
     "        \n",
     "        #order\n",
-    "        prun.after(mnist)\n",
-    "        quan_aware.after(mnist)\n",
-    "        result.after(quan_aware)\n",
+    "        quan.after(mnist)\n",
+    "\n",
+    "        result.after(quan)\n",
     "\n",
     "    \n",
     "if __name__ == '__main__':\n",
@@ -127,8 +113,7 @@
     "                 'dropout_rate': '0.18',\n",
     "                 'model_path':'/result', #'/result/saved_model'\n",
     "                 'model_version': '/base_model.h5',#/Base_model.h5\n",
-    "                 'model_version2': '/prun_model.h5',\n",
-    "                 'model_version3': '/quan_aware_model.h5'\n",
+    "                 'model_version2': '/quan_model.h5'\n",
     "                }\n",
     "    kfp.Client().create_run_from_pipeline_func(pipeline_func=fmnist_pipeline, arguments=arguments)"
    ]
