all pipeline and integer pipeline add

--- a/all_pipeline.ipynb
+++ b/all_pipeline.ipynb
@@ -2,9 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Experiment link <a href=\"/pipeline/#/experiments/details/59355ac0-a50b-45c7-a435-3b7f987ecb36\" target=\"_blank\" >here</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run link <a href=\"/pipeline/#/runs/details/5d9a9451-5352-4440-b2b2-fd07b08d961d\" target=\"_blank\" >here</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import kfp\n",
     "import kfp.dsl as dsl\n",
@@ -23,7 +48,7 @@
     "    description='mnist '\n",
     ")\n",
     "\n",
-    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2):\n",
+    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2, model_version3, model_version4):\n",
     "    \n",
     "    exit_task = echo_op(\"Done!\")\n",
     "    \n",
@@ -52,15 +77,43 @@
     "            pvolumes={\"/result\": fmnist_vop.volume}\n",
     "        )\n",
     "        \n",
-    "        #dynamic quan\n",
-    "        integer_quant = dsl.ContainerOp(\n",
-    "            name='integer_quant',\n",
-    "            image='khw2126/integer_quant:0.0.1',\n",
-    "            command=['python', '/app/integer_quant.py'],\n",
+    "        #prun com\n",
+    "        prun = dsl.ContainerOp(\n",
+    "            name='prun',\n",
+    "            image='khw2126/prun:0.0.11',\n",
+    "            command=['python', '/app/pruning_code.py'],\n",
     "            arguments=[\n",
     "                \"--model_path\", model_path,\n",
     "                \"--model_version\", model_version,\n",
     "                \"--model_version2\", model_version2,\n",
+    "            ],\n",
+    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
+    "            pvolumes={\"/result\": mnist.pvolume}\n",
+    "        )\n",
+    "        \n",
+    "        #quan aware com\n",
+    "        quan_aware = dsl.ContainerOp(\n",
+    "            name='quan_aware',\n",
+    "            image='khw2126/quan:0.0.9',\n",
+    "            command=['python', '/app/quantization_aware_code.py'],\n",
+    "            arguments=[\n",
+    "                \"--model_path\", model_path,\n",
+    "                \"--model_version\", model_version,\n",
+    "                \"--model_version3\", model_version3,\n",
+    "            ],\n",
+    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
+    "            pvolumes={\"/result\": mnist.pvolume}\n",
+    "        )\n",
+    "        \n",
+    "        #dynamic quan\n",
+    "        dynamic_quan = dsl.ContainerOp(\n",
+    "            name='dynamic_quan',\n",
+    "            image='khw2126/dynamic_quan:0.0.4',\n",
+    "            command=['python', '/app/dynamic_quant.py'],\n",
+    "            arguments=[\n",
+    "                \"--model_path\", model_path,\n",
+    "                \"--model_version\", model_version,\n",
+    "                \"--model_version4\", model_version4,\n",
     "            ],\n",
     "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
     "            pvolumes={\"/result\": mnist.pvolume}\n",
@@ -76,9 +129,13 @@
     "        )\n",
     "        \n",
     "        #order\n",
-    "        integer_quant.after(mnist)\n",
-    "\n",
-    "        result.after(integer_quant)\n",
+    "        prun.after(mnist)\n",
+    "        quan_aware.after(mnist)\n",
+    "        dynamic_quan.after(mnist)\n",
+    "        result.after(prun)\n",
+    "        result.after(quan_aware)\n",
+    "        result.after(dynamic_quan)\n",
+    "        \n",
     "\n",
     "    \n",
     "if __name__ == '__main__':\n",
@@ -88,10 +145,19 @@
     "                 'dropout_rate': '0.18',\n",
     "                 'model_path':'/result', #'/result/saved_model'\n",
     "                 'model_version': '/base_model.h5',#/Base_model.h5\n",
-    "                 'model_version2': '/integer_post_quan_tflite_file.tflite'\n",
+    "                 'model_version2': '/prun_model.h5',\n",
+    "                 'model_version3': '/quan_aware_model.h5',\n",
+    "                 'model_version4': '/dynamic_post_quan_tflite_file.tflite'\n",
     "                }\n",
     "    kfp.Client().create_run_from_pipeline_func(pipeline_func=fmnist_pipeline, arguments=arguments)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
