--- a/dynamic_quan_pipe.ipynb
+++ b/dynamic_quan_pipe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/html": [
-       "Run link <a href=\"/pipeline/#/runs/details/7fa07536-b5b8-4798-b48e-1136aeede8da\" target=\"_blank\" >here</a>"
+       "Run link <a href=\"/pipeline/#/runs/details/825414c3-150d-4692-b4b2-ede68776dc4c\" target=\"_blank\" >here</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -79,7 +79,7 @@
     "        \n",
     "        #dynamic quan\n",
     "        dynamic_quan = dsl.ContainerOp(\n",
-    "            name='quan',\n",
+    "            name='dynamic_quan',\n",
     "            image='khw2126/dynamic_quan:0.0.3',\n",
     "            command=['python', '/app/dynamic_quant.py'],\n",
     "            arguments=[\n",
