--- a/prun_pipe.ipynb
+++ b/prun_pipe.ipynb
@@ -48,7 +48,7 @@
     "    description='mnist '\n",
     ")\n",
     "\n",
-    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2, model_version3):\n",
+    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2):\n",
     "    \n",
     "    exit_task = echo_op(\"Done!\")\n",
     "    \n",
@@ -91,20 +91,6 @@
     "            pvolumes={\"/result\": mnist.pvolume}\n",
     "        )\n",
     "        \n",
-    "        #quan com\n",
-    "        quan_aware = dsl.ContainerOp(\n",
-    "            name='quan_aware',\n",
-    "            image='khw2126/quan:0.0.8',\n",
-    "            command=['python', '/app/quantization_aware_code.py'],\n",
-    "            arguments=[\n",
-    "                \"--model_path\", model_path,\n",
-    "                \"--model_version\", model_version,\n",
-    "                \"--model_version3\", model_version3,\n",
-    "            ],\n",
-    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
-    "            pvolumes={\"/result\": prun.pvolume}\n",
-    "        )\n",
-    "        \n",
     "        #result com\n",
     "        result = dsl.ContainerOp(\n",
     "            name='list_list',\n",
@@ -116,8 +102,7 @@
     "        \n",
     "        #order\n",
     "        prun.after(mnist)\n",
-    "        quan_aware.after(mnist)\n",
-    "        result.after(quan_aware)\n",
+    "        result.after(prun)\n",
     "\n",
     "    \n",
     "if __name__ == '__main__':\n",
@@ -127,8 +112,7 @@
     "                 'dropout_rate': '0.18',\n",
     "                 'model_path':'/result', #'/result/saved_model'\n",
     "                 'model_version': '/base_model.h5',#/Base_model.h5\n",
-    "                 'model_version2': '/prun_model.h5',\n",
-    "                 'model_version3': '/quan_aware_model.h5'\n",
+    "                 'model_version2': '/prun_model.h5'\n",
     "                }\n",
     "    kfp.Client().create_run_from_pipeline_func(pipeline_func=fmnist_pipeline, arguments=arguments)"
    ]
