--- a/integer_pipe.ipynb
+++ b/integer_pipe.ipynb
@@ -2,9 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Experiment link <a href=\"/pipeline/#/experiments/details/59355ac0-a50b-45c7-a435-3b7f987ecb36\" target=\"_blank\" >here</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run link <a href=\"/pipeline/#/runs/details/2f9ee714-2f7a-4e8d-b5f2-a9a93da41438\" target=\"_blank\" >here</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import kfp\n",
     "import kfp.dsl as dsl\n",
@@ -55,7 +80,7 @@
     "        #dynamic quan\n",
     "        integer_quant = dsl.ContainerOp(\n",
     "            name='integer_quant',\n",
-    "            image='khw2126/integer_quant:0.0.1',\n",
+    "            image='khw2126/integer_quant:0.0.3',\n",
     "            command=['python', '/app/integer_quant.py'],\n",
     "            arguments=[\n",
     "                \"--model_path\", model_path,\n",
@@ -92,6 +117,13 @@
     "                }\n",
     "    kfp.Client().create_run_from_pipeline_func(pipeline_func=fmnist_pipeline, arguments=arguments)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
