float16 quantization add and pipeline test finish

--- a/all_pipeline.ipynb
+++ b/all_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/html": [
-       "Run link <a href=\"/pipeline/#/runs/details/5d9a9451-5352-4440-b2b2-fd07b08d961d\" target=\"_blank\" >here</a>"
+       "Run link <a href=\"/pipeline/#/runs/details/94e58763-78d4-4660-9994-f68ba81a1785\" target=\"_blank\" >here</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -48,7 +48,7 @@
     "    description='mnist '\n",
     ")\n",
     "\n",
-    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2, model_version3, model_version4):\n",
+    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2, model_version3, model_version4, model_version5):\n",
     "    \n",
     "    exit_task = echo_op(\"Done!\")\n",
     "    \n",
@@ -119,6 +119,20 @@
     "            pvolumes={\"/result\": mnist.pvolume}\n",
     "        )\n",
     "        \n",
+    "        #integer_quan\n",
+    "        integer_quant = dsl.ContainerOp(\n",
+    "            name='integer_quant',\n",
+    "            image='khw2126/integer_quant:0.0.4',\n",
+    "            command=['python', '/app/integer_quant.py'],\n",
+    "            arguments=[\n",
+    "                \"--model_path\", model_path,\n",
+    "                \"--model_version\", model_version,\n",
+    "                \"--model_version5\", model_version2,\n",
+    "            ],\n",
+    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
+    "            pvolumes={\"/result\": mnist.pvolume}\n",
+    "        )\n",
+    "        \n",
     "        #result com\n",
     "        result = dsl.ContainerOp(\n",
     "            name='list_list',\n",
@@ -132,9 +146,12 @@
     "        prun.after(mnist)\n",
     "        quan_aware.after(mnist)\n",
     "        dynamic_quan.after(mnist)\n",
+    "        integer_quant.after(mnist)\n",
+    "        \n",
     "        result.after(prun)\n",
     "        result.after(quan_aware)\n",
     "        result.after(dynamic_quan)\n",
+    "        result.after(integer_quant)\n",
     "        \n",
     "\n",
     "    \n",
@@ -147,7 +164,8 @@
     "                 'model_version': '/base_model.h5',#/Base_model.h5\n",
     "                 'model_version2': '/prun_model.h5',\n",
     "                 'model_version3': '/quan_aware_model.h5',\n",
-    "                 'model_version4': '/dynamic_post_quan_tflite_file.tflite'\n",
+    "                 'model_version4': '/dynamic_post_quan_tflite_file.tflite',\n",
+    "                 'model_version5': '/integer_post_quan_tflite_file.tflite'\n",
     "                }\n",
     "    kfp.Client().create_run_from_pipeline_func(pipeline_func=fmnist_pipeline, arguments=arguments)"
    ]
