--- a/float16_quan.ipynb
+++ b/float16_quan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/html": [
-       "Run link <a href=\"/pipeline/#/runs/details/b2660133-1ba9-425a-9e22-45a00ab6a6a1\" target=\"_blank\" >here</a>"
+       "Run link <a href=\"/pipeline/#/runs/details/0b1cd924-1d5c-4559-b416-c031aafb4c2e\" target=\"_blank\" >here</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -78,10 +78,10 @@
     "        )\n",
     "        \n",
     "        #integer_quan\n",
-    "        integer_quant = dsl.ContainerOp(\n",
-    "            name='integer_quant',\n",
-    "            image='khw2126/integer_quant:0.0.3',\n",
-    "            command=['python', '/app/integer_quant.py'],\n",
+    "        float16_quant = dsl.ContainerOp(\n",
+    "            name='float16_quant',\n",
+    "            image='khw2126/float16_quant:0.0.1',\n",
+    "            command=['python', '/app/float16_quant.py'],\n",
     "            arguments=[\n",
     "                \"--model_path\", model_path,\n",
     "                \"--model_version\", model_version,\n",
@@ -101,9 +101,9 @@
     "        )\n",
     "        \n",
     "        #order\n",
-    "        integer_quant.after(mnist)\n",
+    "        float16_quant.after(mnist)\n",
     "\n",
-    "        result.after(integer_quant)\n",
+    "        result.after(float16_quant)\n",
     "\n",
     "    \n",
     "if __name__ == '__main__':\n",
@@ -113,7 +113,7 @@
     "                 'dropout_rate': '0.18',\n",
     "                 'model_path':'/result', #'/result/saved_model'\n",
     "                 'model_version': '/base_model.h5',#/Base_model.h5\n",
-    "                 'model_version2': '/integer_post_quan_tflite_file.tflite'\n",
+    "                 'model_version2': '/fp16_post_quan_tflite_file.tflite'\n",
     "                }\n",
     "    kfp.Client().create_run_from_pipeline_func(pipeline_func=fmnist_pipeline, arguments=arguments)"
    ]
