float 16 finish and pruning&TFLite pipeline add

--- a/float16_quan.ipynb
+++ b/float16_quan.ipynb
@@ -77,7 +77,7 @@
     "            pvolumes={\"/result\": fmnist_vop.volume}\n",
     "        )\n",
     "        \n",
-    "        #integer_quan\n",
+    "        #float16_quan\n",
     "        float16_quant = dsl.ContainerOp(\n",
     "            name='float16_quant',\n",
     "            image='khw2126/float16_quant:0.0.1',\n",
