--- a/prun_tflite.ipynb
+++ b/prun_tflite.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/html": [
-       "Run link <a href=\"/pipeline/#/runs/details/d1df5385-3de5-4f7e-9acb-5b5bebada68a\" target=\"_blank\" >here</a>"
+       "Run link <a href=\"/pipeline/#/runs/details/682dfeed-f856-4a25-916d-39c52906eb88\" target=\"_blank\" >here</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -48,7 +48,7 @@
     "    description='mnist '\n",
     ")\n",
     "\n",
-    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2, model_version3, model_version4, model_version5, model_version6):\n",
+    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2, model_version3):\n",
     "    \n",
     "    exit_task = echo_op(\"Done!\")\n",
     "    \n",
@@ -91,60 +91,18 @@
     "            pvolumes={\"/result\": mnist.pvolume}\n",
     "        )\n",
     "        \n",
-    "        #quan aware com\n",
-    "        quan_aware = dsl.ContainerOp(\n",
-    "            name='quan_aware',\n",
-    "            image='khw2126/quan:0.0.9',\n",
-    "            command=['python', '/app/quantization_aware_code.py'],\n",
+    "        #prun tflite com\n",
+    "        prun_tflite = dsl.ContainerOp(\n",
+    "            name='prun_tflite',\n",
+    "            image='khw2126/prun_tflite:0.0.1',\n",
+    "            command=['python', '/app/pruning_tflite.py'],\n",
     "            arguments=[\n",
     "                \"--model_path\", model_path,\n",
-    "                \"--model_version\", model_version,\n",
+    "                \"--model_version2\", model_version2,\n",
     "                \"--model_version3\", model_version3,\n",
     "            ],\n",
     "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
-    "            pvolumes={\"/result\": mnist.pvolume}\n",
-    "        )\n",
-    "        \n",
-    "        #dynamic quan\n",
-    "        dynamic_quan = dsl.ContainerOp(\n",
-    "            name='dynamic_quan',\n",
-    "            image='khw2126/dynamic_quan:0.0.4',\n",
-    "            command=['python', '/app/dynamic_quant.py'],\n",
-    "            arguments=[\n",
-    "                \"--model_path\", model_path,\n",
-    "                \"--model_version\", model_version,\n",
-    "                \"--model_version4\", model_version4,\n",
-    "            ],\n",
-    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
-    "            pvolumes={\"/result\": mnist.pvolume}\n",
-    "        )\n",
-    "        \n",
-    "        #integer_quan\n",
-    "        integer_quant = dsl.ContainerOp(\n",
-    "            name='integer_quant',\n",
-    "            image='khw2126/integer_quant:0.0.4',\n",
-    "            command=['python', '/app/integer_quant.py'],\n",
-    "            arguments=[\n",
-    "                \"--model_path\", model_path,\n",
-    "                \"--model_version\", model_version,\n",
-    "                \"--model_version5\", model_version2,\n",
-    "            ],\n",
-    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
-    "            pvolumes={\"/result\": mnist.pvolume}\n",
-    "        )\n",
-    "        \n",
-    "        #float16_quan\n",
-    "        float16_quant = dsl.ContainerOp(\n",
-    "            name='float16_quant',\n",
-    "            image='khw2126/float16_quant:0.0.2',\n",
-    "            command=['python', '/app/float16_quant.py'],\n",
-    "            arguments=[\n",
-    "                \"--model_path\", model_path,\n",
-    "                \"--model_version\", model_version,\n",
-    "                \"--model_version6\", model_version6,\n",
-    "            ],\n",
-    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
-    "            pvolumes={\"/result\": mnist.pvolume}\n",
+    "            pvolumes={\"/result\": prun.pvolume}\n",
     "        )\n",
     "        \n",
     "        #result com\n",
@@ -158,17 +116,8 @@
     "        \n",
     "        #order\n",
     "        prun.after(mnist)\n",
-    "        quan_aware.after(mnist)\n",
-    "        dynamic_quan.after(mnist)\n",
-    "        integer_quant.after(mnist)\n",
-    "        float16_quant.after(mnist)\n",
-    "        \n",
-    "        result.after(prun)\n",
-    "        result.after(quan_aware)\n",
-    "        result.after(dynamic_quan)\n",
-    "        result.after(integer_quant)\n",
-    "        result.after(float16_quant)\n",
-    "        \n",
+    "        prun_tflite.after(prun)\n",
+    "        result.after(prun_tflite)\n",
     "\n",
     "    \n",
     "if __name__ == '__main__':\n",
@@ -179,10 +128,7 @@
     "                 'model_path':'/result', #'/result/saved_model'\n",
     "                 'model_version': '/base_model.h5',#/Base_model.h5\n",
     "                 'model_version2': '/prun_model.h5',\n",
-    "                 'model_version3': '/quan_aware_model.h5',\n",
-    "                 'model_version4': '/dynamic_post_quan_tflite_file.tflite',\n",
-    "                 'model_version5': '/integer_post_quan_tflite_file.tflite',\n",
-    "                 'model_version6': '/fp16_post_quan_tflite_file.tflite'\n",
+    "                 'model_version3': '/weightpruning_tflite_file.tflite'\n",
     "                }\n",
     "    kfp.Client().create_run_from_pipeline_func(pipeline_func=fmnist_pipeline, arguments=arguments)"
    ]
